# tina-codex-assistant

./: .gitignore  CDN_INTEGRATION_STATUS.md  GITHUB_ACTIONS_GUIDE.md  HI_CODEX_ANALYSIS.md  HI_CODEX_CDN_CONFIG.md  HI_CODEX_CDN_INTEGRATION_GUIDE.md  IMPROVEMENT_PLAN.md  OFFLINE_INSTALLATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETE_SUMMARY.md  PUSH_GUIDE.md  README.md  TOKEN_403_DEBUG.md  TOKEN_FIX.md  TOKEN_PERMISSION_GUIDE.md  TinaCodexAssistant.spec  WINDOWS_USAGE.md  pyproject.toml  test_cdn_config.py
.github/workflows/: build-windows.yml
resources/: statsig-zh-CN-raw-snapshot.json
scripts/: build-windows.ps1  download-offline-resources-enhanced.ps1  download-offline-resources.ps1  prepare_resources.py
src/tina_codex_assistant/: __init__.py  app_service.py  cdn_config.py  cli.py  core.py  injector.py  offline_resources.py  resources.py  ui_app.py  windows_installer.py
src/tina_codex_assistant/ui/: index.html
tests/: test_app_service.py  test_core.py  test_injector.py  test_resources.py  test_windows_installer.py  test_windows_packaging.py
